--- a/style.css
+++ b/style.css
@@ -56,6 +56,9 @@
 --------------------------------------------------------*/
 /* Patua One */
 /* P  */
+.Livviche{
+   font-family: 'Livvic';
+}
 .Livvic{
   font-family: 'Livvic';
   font-style: bold;
