--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
 .align-left{
   text-align: left;
 }
+.text-justify{
+  text-align: justify;
+}
 /** 
 * 
 * -----------------------------------------------------------------------------
