--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1620,7 +1620,12 @@
     }
 }
 
-@media only screen and (max-width: 480px) {    
+@media only screen and (max-width: 480px) {  
+    .span1,.btn_wrap{
+        width: 100px;
+       
+        font-size: 12px;
+    }  
     .rs-testimonial.style10 .testi-top-section .slick-part .slider.slider-for2 .testi-item .item-content span img {
         width: 50px;
     }
