--- a/style.css
+++ b/style.css
@@ -11,6 +11,13 @@
 .navy-blue {
   color: #000080;
 }
+/* @media screen and (max-width: 980px) {
+  .subscribe{
+    font-size: .3rem;
+    color:'red'
+  }
+
+} */
 
 /** 
 * 
@@ -84,11 +91,20 @@
   border-radius: 5px ;
   color: white !important;
   margin-bottom: 20px !important;
+  font-size: 14px;
 
   
 animation: scalexxyy 1s ease-in-out infinite alternate ;
 
  
+}
+@media screen and (max-width: 545px) {
+  .subscribe{
+    font-size:.4rem;
+  }
+  .span1{
+    font-size: .4rem;
+  }
 }
 .testi-effects-layer{
   align-items: center;
@@ -13358,7 +13374,7 @@ ul#menu12 li {
   height: 72px;
   border-radius: 80px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 20px;
+  font-size: 12px;
   text-align: center;
   line-height: 70px;
   letter-spacing: 2px;
