--- a/style.css
+++ b/style.css
@@ -27,6 +27,15 @@ margin-right: 5px;
   background-repeat: no-repeat !important;
   background-size: cover !important;
 } */
+
+.ff{
+  align-self: center;
+}
+.content-phone-content li {
+list-style-type: disc !important;
+margin-top: 5px;
+color: #020E38;
+}
 .link-mobile{
   transition: all 150ms ease-in;
 }
@@ -40,9 +49,30 @@ height: 450px;
 .probsta,.productintro{
 overflow: hidden;
 }
- .probsta img {
+.problemscontainer{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+}
+.pitem{
+  display: flex;
+  flex-direction: column;
+  width: 350px;
+  min-height: 200px;
+  
+  align-items: center;
+  justify-content: flex-start;
+}
+.pitem p{
+  text-align: center;
+  width: 200px;
+}
+
+ /* .probsta img {
    transform: translateY(-180px);
- }
+ } */
 
  .productintro img {
    transform: translateY(-70px);
@@ -89,6 +119,7 @@ z-index: 9;
   z-index: -99;
  }
 
+
  @keyframes bigwave {
   from{
     background-position: 100% 20% !important;
@@ -115,11 +146,29 @@ z-index: 9;
 }
 }
 @media screen and (max-width: 768px) {
-  .twosections{
+  .twosections,.content-phone,.content-phone-content {
     flex-direction: column;
+    align-items: center;
   }
-  .banner-img1{
+ 
+  .banner-img1,.content-phone-content,.content-phone{
 width: 100%;
+  }
+  .content-phone-content li{
+margin-top: 10px;
+  }
+  .content-phone-image{
+transform: none !important;
+  }
+    .content-phone-content{
+      align-self: center !important;
+      justify-content: center;
+     
+    }
+  
+ 
+  .content-phone-content{
+width: 80% !important;
   }
   .bimg2{
     margin-top: 10px;
@@ -4950,10 +4999,42 @@ body .search-modal .close:hover {
 .rs-banner.style3.modify2 {
   background: unset;
   border-radius: unset;
-  padding: 130px 0px 100px 0px;
+  padding: 105px 0px 100px 0px;
   /* padding: 10% 0px 70% 0px; */
 }
 
+.content-phone-section{
+  background-color:#f0f8ff;
+  position: relative;
+}
+.content-phone-section::before{
+  content: "" ;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 80px;
+  clip-path: polygon(100% 0,0 100%, 100% 100%);
+
+  background-color: #fff;
+
+
+}
+.content-phone-image{
+  width: 40%;
+
+}
+.content-phone-image{
+    align-self: flex-start;
+  width: 350px;
+  transform: translateY(-50px);
+}
+.content-phone-content{
+  align-self: flex-start;
+  
+  
+  width: 65%;
+}
 .rs-banner.style3.modify2 .banner-content .title {
   color: #101010;
 }
