--- a/style.css
+++ b/style.css
@@ -28,8 +28,26 @@ margin-right: 5px;
   background-size: cover !important;
 } */
 
+  .text-custom{
+    font-size: 1.7rem;
+    font-weight: bold;
+  }
+
 .ff{
   align-self: center;
+}
+.pintroitem img{
+  width: 300px;
+}
+.pintroitem{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+.phoneintro{
+  width: 60px !important;
+  margin-right: 25px;
 }
 .content-phone-content li {
 list-style-type: disc !important;
@@ -59,15 +77,25 @@ overflow: hidden;
 .pitem{
   display: flex;
   flex-direction: column;
-  width: 350px;
+  width: 250px;
   min-height: 200px;
   
   align-items: center;
   justify-content: flex-start;
 }
+.money{
+  height: 102px;
+}
 .pitem p{
   text-align: center;
   width: 200px;
+  line-height: 24px;
+}
+.pintroitem img{
+  width: 100px;
+}
+.pintroitem p{
+  width: 80%;
 }
 
  /* .probsta img {
@@ -146,6 +174,35 @@ z-index: 9;
 }
 }
 @media screen and (max-width: 768px) {
+  /* .pintroitem:nth-child(even) {
+      background-color: #d4e6fb;
+      border-radius: 5px;
+      padding-top: 10px!important;
+    } */
+         .pintroitem {
+          background-color:#f0f8ff;
+          border-radius: 5px;
+          padding-top: 10px!important;
+          margin-top: 10px !important;
+        }
+
+.pintroitem p {
+    width: 100%;
+    padding: 1rem;
+   
+    text-align: justify;
+  }
+  .custompro{
+    width: 100% !important;
+    padding: 0 !important;
+  }
+  .pintroitem {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 20px;
+    }
   .twosections,.content-phone,.content-phone-content {
     flex-direction: column;
     align-items: center;
