--- a/style.css
+++ b/style.css
@@ -3,7 +3,11 @@
 .align-left {
   text-align: left;
 }
-
+.mycolorrr{
+  background-color: #F0F8FF;
+/* background-image: linear-gradient(to top, #accbee 0%, #e7f0fd 100%);} */
+/* background-image: linear-gradient(-20deg, #b721ff 0%, #21d4fd 100%); */
+}
 .text-justify {
   text-align: justify;
 }
