removed whitespace in mobile view for hero
1. made default theme as dark by default.
2.fixed mobile view button issue

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -16,6 +16,9 @@
   .agilehero .swiper-slide {
     height: 250px;
   }
+  .hero-section{
+    padding-top: 10px;
+  }
 
   .agilehero2 .swiper-slide {
     height: 250px;
