--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -68,7 +68,7 @@
  /* grid-row-gap: 250px; */
  /* justify-content: space-between; */
  align-items: center;
- /* padding-top: 30px; */
+ padding-top: 30px;
  padding-bottom: 24px;
  display: flex;
  }
